kubernetes/services/education/education-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: education-service
  namespace: default
spec:
  selector:
    app: education-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
