kubernetes/services/education/education-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: education-virtualservice
  namespace: default
spec:
  gateways:
    - istio-system/api-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /api/v1/education/
      route:
        - destination:
            host: education-service
            port:
              number: 8080
